--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
         
     </head>
     <body>
-        <p class="text">f</p>
-      <p for="horns" class="onel">f</p>
-      <p for="horns" class="twol">f</p>
-      <p for="horns" class="threel">f</p>
-      <p for="horns" class="fourl">f</p>
-    <p class="ver"></p>
-    <p class="never"></p>
-    <p class="prav"></p>
+        <div class="popup">  
+        <button class="start">start</button>
+        <div class="div disabled">
+            <p class="text">f</p>
+          <button for="horns" class="onel btn">f</button>
+          <button for="horns" class="twol btn">f</button>
+          <button for="horns" class="threel btn">f</button>
+          <button for="horns" class="fourl btn">f</button>
+        <p class="ver"></p>
+        <p class="never"></p>
+        <p class="prav"></p>
+
+        </div>
+        </div>
     <script src="./script.js"></script>
     </body>
 </html>
