--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
           <button for="horns" class="twol btn">f</button>
           <button for="horns" class="threel btn">f</button>
           <button for="horns" class="fourl btn">f</button>
+          <button for="horns" class="fivel btn">f</button>
+          <button for="horns" class="sixl btn">f</button>
         <p class="ver"></p>
         <p class="never"></p>
         <p class="prav"></p>
 
         </div>
         </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
+    <script src="./constant.js" type="module"></script>
     </body>
 </html>
