--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <button class="start">start</button>
         <div class="div disabled">
             <p class="text">f</p>
-          <button for="horns" class="onel btn">f</button>
-          <button for="horns" class="twol btn">f</button>
-          <button for="horns" class="threel btn">f</button>
-          <button for="horns" class="fourl btn">f</button>
-          <button for="horns" class="fivel btn">f</button>
-          <button for="horns" class="sixl btn">f</button>
+            <div class="button__container">
+
+            </div>
+
         <p class="ver"></p>
         <p class="never"></p>
         <p class="prav"></p>
