--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="ver"></p>
         <p class="never"></p>
         <p class="prav"></p>
-
+        <p class="skoko"></p>
         </div>
         </div>
     <script src="./script.js" type="module"></script>
