--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <p class="never"></p>
         <p class="prav"></p>
         <p class="skoko"></p>
+
+
+        </div>
+        <div class="itog disabled">
+            <p class="vas">Ваш балл:</p>
+            <p class="ocenka">3</p>
         </div>
         </div>
     <script src="./script.js" type="module"></script>
