--- a/index.html
+++ b/index.html
@@ -7,29 +7,8 @@
         
     </head>
     <body>
-
-
-        <div class="popup">  
         <button class="start">start</button>
-        <div class="div disabled">
-            <p class="text">f</p>
-            <div class="button__container">
-     
-            </div>
-
-        <p class="ver"></p>
-        <p class="never"></p>
-        <p class="prav"></p>
-        <p class="skoko"></p>
-
-
-        </div>
-        <div class="itog disabled">
-            <p class="vas">Ваш балл:</p>
-            <p class="ocenka">3</p>
-        </div>
-        </div>
-    <script src="./script.js" type="module"></script>
-    <script src="./constant.js" type="module"></script>
+    <script src="./script.js" ></script>
+    <iframe src="./quiz/quiz.html" width="480" height="100%" class="quiz-frame disabled"></iframe>
     </body>
 </html>
