--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <button class="start">start</button>
     <script src="./script.js" ></script>
-    <iframe src="./quiz/quiz.html" width="480" height="100%" class="quiz-frame disabled"></iframe>
+    <iframe src="./quiz/quiz.html" width="100%" height="100%" class="quiz-frame disabled"></iframe>
     </body>
 </html>
