--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         
     </head>
     <body>
-        <button class="start">start</button>
+        <button class="start btnstar">start</button>
+        <button class="start exe">Экзамен</button>
     <script src="./script.js" ></script>
     <iframe src="./quiz/quiz.html" width="100%" height="100%" class="quiz-frame disabled"></iframe>
+    <iframe src="./exe/exe.html" width="100%" height="100%" class="exe-frame disabled"></iframe>
     </body>
 </html>
